Update logo text from 'HUDCR' to 'Hudson Craig'

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <a class="skip-link" href="#about">Skip to content</a>
   <header id="top" class="site-header">
     <div class="container header-inner">
-      <a class="logo" href="#top">HUDCR</a>
+      <a class="logo" href="#top">Hudson Craig</a>
       <nav aria-label="Primary">
         <ul class="nav-list">
           <li><a href="#about">About</a></li>
