Update title from 'Hudson Cruz' to 'Hudson Craig'

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Hudson Cruz · Product Designer & Front-End Developer</title>
+  <title>Hudson Craig · Product Designer & Front-End Developer</title>
   <meta name="description" content="Minimal personal portfolio for Hudson Cruz, product designer and front-end developer. Showcasing projects, experience, and ways to connect.">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
