--- a/index.html
+++ b/index.html
@@ -1,194 +1,111 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Hudson Craig · Product Designer & Front-End Developer</title>
-  <meta name="description" content="Minimal personal portfolio for Hudson Cruz, product designer and front-end developer. Showcasing projects, experience, and ways to connect.">
+  <title>Hudson · E-Portfolio</title>
+  <meta name="description" content="Minimal personal e-portfolio for Hudson, a computer science student at the University of Montana.">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <a class="skip-link" href="#about">Skip to content</a>
-  <header id="top" class="site-header">
+  <header class="site-header">
     <div class="container header-inner">
-      <a class="logo" href="#top">Hudson Craig</a>
-      <nav aria-label="Primary">
-        <ul class="nav-list">
-          <li><a href="#about">About</a></li>
-          <li><a href="#skills">Skills</a></li>
-          <li><a href="#projects">Projects</a></li>
-          <li><a href="#experience">Experience</a></li>
-          <li><a href="#contact">Contact</a></li>
-        </ul>
-      </nav>
+      <div class="identity">
+        <span class="site-title">Hudson</span>
+        <span class="site-subtitle">Computer Science @ University of Montana</span>
+      </div>
+      <button class="theme-toggle" type="button" aria-pressed="false">Switch to dark</button>
     </div>
   </header>
 
-  <main>
-    <section class="hero">
-      <div class="container hero-inner">
-        <div class="hero-copy">
-          <p class="eyebrow">Product Designer · Front-End Developer</p>
-          <h1>Designing meaningful digital experiences with intent and clarity.</h1>
-          <p class="lede">I help teams translate complex ideas into elegant products. Currently focusing on design systems, accessible interfaces, and delightful micro-interactions.</p>
-          <div class="hero-actions">
-            <a class="button" href="mailto:hello@hudcr.com">Let's collaborate</a>
-            <a class="link" href="#projects">View selected work</a>
-          </div>
-        </div>
-        <div class="hero-visual" aria-hidden="true">
-          <div class="profile-bubble">
-            <span>HC</span>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section id="about" class="section">
-      <div class="container split">
-        <div>
-          <h2>About</h2>
-        </div>
-        <div class="section-body">
-          <p>I craft interfaces where design and engineering work hand-in-hand. With a background that bridges human-centered research and code, I translate strategic insights into build-ready solutions.</p>
-          <p>From leading design sprints to prototyping high-fidelity concepts, I bring calm collaboration and systems thinking to every engagement. My ideal projects pair purposeful product strategy with meticulous execution.</p>
-        </div>
-      </div>
-    </section>
-
-    <section id="skills" class="section surface">
+  <main class="main-content">
+    <section class="intro" id="about">
       <div class="container">
-        <div class="section-heading">
-          <h2>Core skills</h2>
-          <p class="caption">A snapshot of the tools and practices I rely on most.</p>
-        </div>
-        <div class="cards">
-          <article class="card">
-            <h3>Product strategy</h3>
-            <p>Workshop facilitation, discovery research, journey mapping, impact framing, KPI definition, and roadmaps.</p>
-          </article>
-          <article class="card">
-            <h3>Design systems</h3>
-            <p>Accessible component libraries, tokens, documentation, audits, and scalable governance for multidisciplinary teams.</p>
-          </article>
-          <article class="card">
-            <h3>Front-end craft</h3>
-            <p>Responsive UI implementation, rapid prototyping, design handoff, and thoughtful motion design using modern tooling.</p>
-          </article>
-        </div>
+        <p class="eyebrow">Portfolio</p>
+        <h1>Hudson — 20-year-old sophomore studying computer science.</h1>
+        <p class="lede">This space is intentionally minimal so it can grow with you. Add highlights, updates, and new work whenever you're ready.</p>
       </div>
     </section>
 
-    <section id="projects" class="section">
+    <section class="panel" aria-labelledby="current-focus">
       <div class="container">
-        <div class="section-heading">
-          <h2>Selected projects</h2>
-          <p class="caption">Case studies available upon request.</p>
-        </div>
-        <div class="project-grid">
-          <article class="project-card">
-            <div class="project-meta">
-              <p class="project-year">2023</p>
-              <p class="project-role">Lead Product Designer</p>
-            </div>
-            <h3>Beacon analytics platform</h3>
-            <p>Defined a design language and modular dashboards for a cloud-native analytics suite trusted by enterprise teams.</p>
-            <a class="project-link" href="mailto:hello@hudcr.com?subject=Beacon%20case%20study">Request overview</a>
-          </article>
-          <article class="project-card">
-            <div class="project-meta">
-              <p class="project-year">2022</p>
-              <p class="project-role">Design Systems Lead</p>
-            </div>
-            <h3>Atlas component library</h3>
-            <p>Created an inclusive design system that reduced inconsistencies by 60% and accelerated delivery across 8 product squads.</p>
-            <a class="project-link" href="mailto:hello@hudcr.com?subject=Atlas%20case%20study">Request overview</a>
-          </article>
-          <article class="project-card">
-            <div class="project-meta">
-              <p class="project-year">2021</p>
-              <p class="project-role">Product Designer</p>
-            </div>
-            <h3>Northstar mobile banking</h3>
-            <p>Led end-to-end redesign, improving onboarding conversion by 32% with personalized financial guidance and adaptive UI.</p>
-            <a class="project-link" href="mailto:hello@hudcr.com?subject=Northstar%20case%20study">Request overview</a>
-          </article>
-        </div>
+        <h2 id="current-focus">Current focus</h2>
+        <p class="placeholder">Use this section to outline what you're learning or building right now.</p>
       </div>
     </section>
 
-    <section id="experience" class="section surface">
+    <section class="panel" aria-labelledby="projects">
       <div class="container">
-        <div class="section-heading">
-          <h2>Experience</h2>
-          <p class="caption">Highlights from the last decade.</p>
-        </div>
-        <ul class="timeline" aria-label="Career timeline">
-          <li class="timeline-item">
-            <div>
-              <p class="timeline-period">2021 — Present</p>
-              <h3>Principal Product Designer · Studio North</h3>
-            </div>
-            <p>Partnering with product and engineering leads to shape vision, define metrics, and ship new experiences for enterprise SaaS clients.</p>
+        <h2 id="projects">Current projects</h2>
+        <ul class="item-list">
+          <li>
+            <h3>Project title</h3>
+            <p class="placeholder">Add a short description, tech stack, or the problem you're solving.</p>
           </li>
-          <li class="timeline-item">
-            <div>
-              <p class="timeline-period">2018 — 2021</p>
-              <h3>Senior Designer · Gradient Labs</h3>
-            </div>
-            <p>Led design for cross-platform apps, introduced design ops rituals, and mentored designers through growth frameworks.</p>
-          </li>
-          <li class="timeline-item">
-            <div>
-              <p class="timeline-period">2014 — 2018</p>
-              <h3>UX Designer · Independent</h3>
-            </div>
-            <p>Collaborated with startups to define MVPs, built interactive prototypes, and delivered polished interfaces ready for development.</p>
+          <li>
+            <h3>Project title</h3>
+            <p class="placeholder">Add another project or remove this item when you don't need it.</p>
           </li>
         </ul>
       </div>
     </section>
 
-    <section id="contact" class="section">
-      <div class="container split">
-        <div>
-          <h2>Contact</h2>
-        </div>
-        <div class="section-body">
-          <p>Interested in collaborating or want to see more work? Send a note and I’ll get back within two business days.</p>
-          <div class="contact-links">
-            <a href="mailto:hello@hudcr.com" class="contact-link">
-              <span class="contact-label">Email</span>
-              <span>hello@hudcr.com</span>
-            </a>
-            <a href="https://www.linkedin.com" class="contact-link" target="_blank" rel="noopener">
-              <span class="contact-label">LinkedIn</span>
-              <span>/in/hudcr</span>
-            </a>
-            <a href="https://dribbble.com" class="contact-link" target="_blank" rel="noopener">
-              <span class="contact-label">Dribbble</span>
-              <span>@hudcr</span>
-            </a>
-          </div>
-        </div>
+    <section class="panel" aria-labelledby="experience">
+      <div class="container">
+        <h2 id="experience">Experience & involvement</h2>
+        <p class="placeholder">List internships, research, clubs, or other milestones here.</p>
+      </div>
+    </section>
+
+    <section class="panel" aria-labelledby="contact">
+      <div class="container">
+        <h2 id="contact">Contact & links</h2>
+        <p class="placeholder">Add email, LinkedIn, GitHub, or any other ways to reach you.</p>
       </div>
     </section>
   </main>
 
   <footer class="site-footer">
-    <div class="container footer-inner">
-      <p>© <span id="year">2024</span> Hudson Cruz. All rights reserved.</p>
-      <a class="top-link" href="#top">Back to top</a>
+    <div class="container">
+      <small>Last updated <span id="last-updated">—</span>. Replace this text with your own when you publish.</small>
     </div>
   </footer>
 
   <script>
-    const year = document.getElementById('year');
-    if (year) {
-      year.textContent = new Date().getFullYear();
+    const root = document.documentElement;
+    const toggle = document.querySelector('.theme-toggle');
+    const lastUpdated = document.getElementById('last-updated');
+
+    const formatDate = (date) => {
+      return date.toLocaleDateString(undefined, {
+        year: 'numeric',
+        month: 'short',
+        day: 'numeric'
+      });
+    };
+
+    const setTheme = (theme) => {
+      root.setAttribute('data-theme', theme);
+      const isDark = theme === 'dark';
+      toggle.setAttribute('aria-pressed', String(isDark));
+      toggle.textContent = isDark ? 'Switch to light' : 'Switch to dark';
+      localStorage.setItem('hud-theme', theme);
+    };
+
+    const storedTheme = localStorage.getItem('hud-theme');
+    const systemPrefersDark = window.matchMedia('(prefers-color-scheme: dark)').matches;
+    setTheme(storedTheme || (systemPrefersDark ? 'dark' : 'light'));
+
+    toggle.addEventListener('click', () => {
+      const nextTheme = root.getAttribute('data-theme') === 'dark' ? 'light' : 'dark';
+      setTheme(nextTheme);
+    });
+
+    if (lastUpdated) {
+      lastUpdated.textContent = formatDate(new Date());
     }
   </script>
 </body>
