Update title and introduction in index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Hudson · E-Portfolio</title>
+  <title>Hi, I'm Hudson</title>
   <meta name="description" content="Minimal personal e-portfolio for Hudson, a computer science student at the University of Montana.">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -25,15 +25,15 @@
     <section class="intro" id="about">
       <div class="container">
         <p class="eyebrow">Portfolio</p>
-        <h1>Hudson — 20-year-old sophomore studying computer science.</h1>
-        <p class="lede">This space is intentionally minimal so it can grow with you. Add highlights, updates, and new work whenever you're ready.</p>
+        <h1>Hello! My name is Hudson, and I'm currently an undergraduate studying computer science at the University of Montana</h1>
+        <p class="lede">*placeholder*</p>
       </div>
     </section>
 
     <section class="panel" aria-labelledby="current-focus">
       <div class="container">
         <h2 id="current-focus">Current focus</h2>
-        <p class="placeholder">Use this section to outline what you're learning or building right now.</p>
+        <p class="placeholder">wep abb development with django</p>
       </div>
     </section>
 
