Revise project section with new titles and descriptions
Updated project section to include specific project details.

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <p class="lede">*placeholder*</p>
       </div>
     </section>
-
+    
     <section class="panel" aria-labelledby="current-focus">
       <div class="container">
         <h2 id="current-focus">Current focus</h2>
@@ -39,11 +39,12 @@
 
     <section class="panel" aria-labelledby="projects">
       <div class="container">
-        <h2 id="projects">Current projects</h2>
+        <h2 id="projects">Current projects/Web App dev</h2>
         <ul class="item-list">
           <li>
-            <h3>Project title</h3>
-            <p class="placeholder">Add a short description, tech stack, or the problem you're solving.</p>
+            <h3>Blog site</h3>
+            <p class="placeholder">Django blog site.</p>
+            <a href="url">link text</a>
           </li>
           <li>
             <h3>Project title</h3>
