--- a/index.html
+++ b/index.html
@@ -43,8 +43,7 @@
         <ul class="item-list">
           <li>
             <h3>Blog site</h3>
-            <p class="placeholder">Django blog site.</p>
-            <a href="url">link text</a>
+            <a href="https://github.com/UM-CS/ch4-company-website-hudcr">Django Blog Site</a>
           </li>
           <li>
             <h3>Project title</h3>
