Update introduction text in index.html

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <section class="intro" id="about">
       <div class="container">
         <p class="eyebrow">Portfolio</p>
-        <h1>Hello! My name is Hudson, and I'm currently an undergraduate studying computer science at the University of Montana</h1>
+        <h1>Hello! My name is Hudson Craig. I may not have much experience yet, but I have <u>potential.</u></h1>
         <p class="lede">*placeholder*</p>
       </div>
     </section>
