Update project titles to reflect completion status

--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
         <h2 id="projects">Current projects/Web App dev</h2>
         <ul class="item-list">
           <li>
-            <h3>Blog site</h3>
+            <h3>Company Site - Finished</h3>
             <a href="https://github.com/UM-CS/ch4-company-website-hudcr">Django Blog Site</a>
           </li>
           <li>
-            <h3>Project title</h3>
+            <h3>Blog Site - Finished</h3>
             <p class="placeholder">Add another project or remove this item when you don't need it.</p>
           </li>
         </ul>
@@ -70,7 +70,7 @@
 
   <footer class="site-footer">
     <div class="container">
-      <small>Last updated <span id="last-updated">—</span>. Replace this text with your own when you publish.</small>
+      <small>Last updated <span id="last-updated">—</span>.</small>
     </div>
   </footer>
 
