Update experience and contact sections in index.html

--- a/index.html
+++ b/index.html
@@ -56,14 +56,16 @@
     <section class="panel" aria-labelledby="experience">
       <div class="container">
         <h2 id="experience">Experience & involvement</h2>
-        <p class="placeholder">List internships, research, clubs, or other milestones here.</p>
+        <p class="placeholder">University of Montana - BS in Computer Science, focus in software engineering</p>
       </div>
     </section>
 
     <section class="panel" aria-labelledby="contact">
       <div class="container">
         <h2 id="contact">Contact & links</h2>
-        <p class="placeholder">Add email, LinkedIn, GitHub, or any other ways to reach you.</p>
+        <li>
+          <a href="https://www.linkedin.com/in/hudson-craig-835902309/">LinkedIn</a>
+        </li>
       </div>
     </section>
   </main>
