--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
         <ul class="item-list">
           <li>
             <h3>Company Site - Finished</h3>
-            <a href="https://github.com/UM-CS/ch4-company-website-hudcr">Django Blog Site</a>
+            <a href="https://github.com/UM-CS/ch4-company-website-hudcr">Django Company Site</a>
           </li>
           <li>
             <h3>Blog Site - Finished</h3>
-            <p class="placeholder">Add another project or remove this item when you don't need it.</p>
+            <a href="https://github.com/hudcr/blog":>Django Blog Site
           </li>
         </ul>
       </div>
