--- a/index.html
+++ b/index.html
@@ -23,23 +23,31 @@
 
   <main class="main-content">
     <section class="intro" id="about">
-      <div class="container">
-        <p class="eyebrow">Portfolio</p>
-        <h1>Hello! My name is Hudson Craig. I may not have much experience yet, but I have <u>potential.</u></h1>
-        <p class="lede">*placeholder*</p>
+      <div class="container intro-inner">
+        <div class="intro-copy">
+          <p class="eyebrow intro-eyebrow">Portfolio</p>
+          <h1 class="intro-title">Hello! My name is Hudson Craig. I may not have much experience yet, but I have <u>potential.</u></h1>
+          <p class="lede intro-lede">*placeholder*</p>
+        </div>
+        <figure class="profile-card" aria-labelledby="profile-label">
+          <div class="profile-photo" role="img" aria-labelledby="profile-label">
+            <span>Drop your photo here</span>
+          </div>
+          <figcaption id="profile-label" class="profile-note">Update the <code>--profile-photo</code> value in <code>styles.css</code> with your portrait to personalize this space.</figcaption>
+        </figure>
       </div>
     </section>
     
     <section class="panel" aria-labelledby="current-focus">
       <div class="container">
-        <h2 id="current-focus">Current focus</h2>
+        <h2 id="current-focus" class="panel-title">Current focus</h2>
         <p class="placeholder">wep abb development with django</p>
       </div>
     </section>
 
     <section class="panel" aria-labelledby="projects">
       <div class="container">
-        <h2 id="projects">Current projects/Web App dev</h2>
+        <h2 id="projects" class="panel-title">Current projects/Web App dev</h2>
         <ul class="item-list">
           <li>
             <h3>Company Site - Finished</h3>
@@ -47,7 +55,7 @@
           </li>
           <li>
             <h3>Blog Site - Finished</h3>
-            <a href="https://github.com/hudcr/blog":>Django Blog Site
+            <a href="https://github.com/hudcr/blog">Django Blog Site</a>
           </li>
         </ul>
       </div>
@@ -55,17 +63,19 @@
 
     <section class="panel" aria-labelledby="experience">
       <div class="container">
-        <h2 id="experience">Experience & involvement</h2>
+        <h2 id="experience" class="panel-title">Experience & involvement</h2>
         <p class="placeholder">University of Montana - BS in Computer Science, focus in software engineering</p>
       </div>
     </section>
 
     <section class="panel" aria-labelledby="contact">
       <div class="container">
-        <h2 id="contact">Contact & links</h2>
-        <li>
-          <a href="https://www.linkedin.com/in/hudson-craig-835902309/">LinkedIn</a>
-        </li>
+        <h2 id="contact" class="panel-title">Contact & links</h2>
+        <ul class="contact-list">
+          <li>
+            <a href="https://www.linkedin.com/in/hudson-craig-835902309/">LinkedIn</a>
+          </li>
+        </ul>
       </div>
     </section>
   </main>
