add photo, change some text.

--- a/index.html
+++ b/index.html
@@ -26,14 +26,13 @@
       <div class="container intro-inner">
         <div class="intro-copy">
           <p class="eyebrow intro-eyebrow">Portfolio</p>
-          <h1 class="intro-title">Hello! My name is Hudson Craig. I may not have much experience yet, but I have <u>potential.</u></h1>
-          <p class="lede intro-lede">*placeholder*</p>
+          <h1 class="intro-title">Hi there. My name is Hudson.</h1>
+          <p class="lede intro-lede">I'm a sophomore at University of Montana, studying Computer Science.</p>
         </div>
         <figure class="profile-card" aria-labelledby="profile-label">
           <div class="profile-photo" role="img" aria-labelledby="profile-label">
             <span>Drop your photo here</span>
           </div>
-          <figcaption id="profile-label" class="profile-note">Update the <code>--profile-photo</code> value in <code>styles.css</code> with your portrait to personalize this space.</figcaption>
         </figure>
       </div>
     </section>
@@ -41,12 +40,12 @@
     <section class="panel" aria-labelledby="current-focus">
       <div class="container">
         <h2 id="current-focus" class="panel-title">Current focus</h2>
-        <p class="placeholder">wep abb development with django</p>
+        <p class="placeholder">wep abb development with django, DSA, also learning about LLMs and plan to release many projects that utilize this amazing technology.</p>
       </div>
     </section>
 
     <section class="panel" aria-labelledby="projects">
-      <div class="container">
+      <div class="container"> 
         <h2 id="projects" class="panel-title">Current projects/Web App dev</h2>
         <ul class="item-list">
           <li>
@@ -64,7 +63,9 @@
     <section class="panel" aria-labelledby="experience">
       <div class="container">
         <h2 id="experience" class="panel-title">Experience & involvement</h2>
-        <p class="placeholder">University of Montana - BS in Computer Science, focus in software engineering</p>
+        <p class="placeholder">University of Montana - pursuing BS in Computer Science, focus in software engineering. I could tell you about my past experience at various fast food chains, 
+          but perhaps I'll not.
+        </p>
       </div>
     </section>
 
@@ -74,6 +75,7 @@
         <ul class="contact-list">
           <li>
             <a href="https://www.linkedin.com/in/hudson-craig-835902309/">LinkedIn</a>
+            <p>Or shoot me an<a href="mailto:someone@example.com"> email.</a></p>
           </li>
         </ul>
       </div>
