Remove placeholder text in profile photo section
Removed placeholder text for profile photo.

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </div>
         <figure class="profile-card" aria-labelledby="profile-label">
           <div class="profile-photo" role="img" aria-labelledby="profile-label">
-            <span>Drop your photo here</span>
+            <span></span>
           </div>
         </figure>
       </div>
