Update image source path in index.html

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           <li>
             <h3>Blog Site - Finished</h3>
             <a href="https://github.com/hudcr/blog">Django Blog Site</a>
-            <img src="image.jpg" alt="Django blog site">
+            <img src="img/image.jpg" alt="Django blog site">
           </li>
         </ul>
       </div>
